--- a/notebooks/16_inference_pipeline.ipynb
+++ b/notebooks/16_inference_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "cc080774-f41a-4503-a064-c0ac819eeb99",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "4bd038bf-8550-420b-9ec2-308198fca80f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "46b8ae0d-58dd-4772-8931-25ff5fccb749",
    "metadata": {},
    "outputs": [],
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "26612685-265e-4415-a149-5751be8f994d",
    "metadata": {},
    "outputs": [
@@ -47,13 +56,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-06 00:21:34,977 INFO: Initializing external client\n",
-      "2025-03-06 00:21:34,977 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-03-06 00:21:35,776 INFO: Python Engine initialized.\n",
+      "2025-03-06 00:51:35,737 INFO: Closing external client and cleaning up certificates.\n",
+      "Connection closed.\n",
+      "2025-03-06 00:51:35,751 INFO: Initializing external client\n",
+      "2025-03-06 00:51:35,752 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-03-06 00:51:36,484 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1214691\n",
-      "Fetching data from 2025-02-05 05:21:34.977593+00:00 to 2025-03-06 04:21:34.977593+00:00\n",
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (4.53s) \n"
+      "Fetching data from 2025-02-05 05:51:35.737315+00:00 to 2025-03-06 04:51:35.737315+00:00\n",
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (5.03s) \n"
      ]
     }
    ],
@@ -88,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "22253dce-140a-4296-a48b-35c6c7655b90",
    "metadata": {},
    "outputs": [
@@ -96,11 +107,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-06 00:21:46,540 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-03-06 00:51:46,060 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-03-06 00:21:46,553 INFO: Initializing external client\n",
-      "2025-03-06 00:21:46,553 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-03-06 00:21:47,298 INFO: Python Engine initialized.\n",
+      "2025-03-06 00:51:46,068 INFO: Initializing external client\n",
+      "2025-03-06 00:51:46,068 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-03-06 00:51:46,839 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1214691\n",
       "Downloading model artifact (0 dirs, 1 files)... DONE\r"
@@ -115,31 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "b868f801-03a3-4d51-8e24-88231e664f29",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UserWarning: Could not find the number of physical cores for the following reason:\n",
-      "[WinError 2] The system cannot find the file specified\n",
-      "Returning the number of logical cores instead. You can silence this warning by setting LOKY_MAX_CPU_COUNT to the number of cores you want to use.\n",
-      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\site-packages\\joblib\\externals\\loky\\backend\\context.py\", line 257, in _count_physical_cores\n",
-      "    cpu_info = subprocess.run(\n",
-      "               ^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 548, in run\n",
-      "    with Popen(*popenargs, **kwargs) as process:\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 1026, in __init__\n",
-      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
-      "  File \"c:\\Users\\2003j\\anaconda3\\envs\\taxi_env\\Lib\\subprocess.py\", line 1538, in _execute_child\n",
-      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
-      "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.inference import get_model_predictions\n",
     "predictions = get_model_predictions(model, features)"
@@ -147,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "751d63ab-8e98-4087-a3cf-d79bd1bd88e5",
    "metadata": {},
    "outputs": [
@@ -266,7 +256,7 @@
        "[252 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "7b171dd4-628a-4c46-af00-92cee476f090",
    "metadata": {},
    "outputs": [
@@ -286,11 +276,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-06 00:21:49,578 INFO: Closing external client and cleaning up certificates.\n",
+      "2025-03-06 00:51:49,387 INFO: Closing external client and cleaning up certificates.\n",
       "Connection closed.\n",
-      "2025-03-06 00:21:49,584 INFO: Initializing external client\n",
-      "2025-03-06 00:21:49,584 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-03-06 00:21:50,364 INFO: Python Engine initialized.\n",
+      "2025-03-06 00:51:49,390 INFO: Initializing external client\n",
+      "2025-03-06 00:51:49,390 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-03-06 00:51:50,179 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1214691\n"
      ]
@@ -310,18 +300,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "0ba8f0db-022e-4f8a-ac34-6fd8bb095b47",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1214691/fs/1202327/fg/1403595\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -345,7 +327,7 @@
        " None)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
